# SimpleCMake

./: .gitignore  CMakeLists.txt
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.c
B/B/: lib.h  macro.h
C/: CMakeLists.txt  index_test.cc  leap_test.cc  main.cc  main.h
